# Analide-de-Redes-de-Desinformacao-no-X-Twitter-estrutura-polarizacao-e-comunidades-digitais-Brasil

./: .gitignore  README.md  pyproject.toml
configs/: config.example.yaml  config.x_recentes.yaml
data/: sample_posts.csv  x_recentes_2026-03-01.csv
notebooks/: README.md
src/ardx/: cli.py
src/ardx/analysis/: __init__.py  graph_metrics.py
src/ardx/collectors/: __init__.py  csv_collector.py  twikit_collector.py  x_api_collector.py
src/ardx/pipeline/: analyze.py  build_network.py  collect.py  report.py  visualize.py
src/ardx/utils/: config.py  io.py
tests/: test_graph_metrics.py
