[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analise-redes-desinformacao-x"
version = "0.1.0"
description = "Pipeline para coletar, construir e analisar redes de desinformação no X"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Equipe de Pesquisa"}]
dependencies = [
  "pandas>=2.1",
  "networkx>=3.2",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "click>=8.1",
  "pyarrow>=15.0",
  "tweepy>=4.14",
  "twikit>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
]

[project.scripts]
ardx = "ardx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
